# MyProjectGTest

./: .gitignore  CMakeLists.txt  README.md  README1.md  Slides_Commands.txt  requirements.txt
include/: my_math.h  utilities.h
src/: CMakeLists.txt  Example.cpp  Example.hpp  main.cpp  my_math.cpp  utilities.cpp
src/Exercises/: CT1_asserts.cpp  CT2_fixture.cpp  CT3_parameterized.cpp  CT4_skip.cpp  CT4_typed.cpp  CT5_death.cpp  CT6_predicated.cpp  CT7_FE_part1.cpp  CT7_FE_part2.cpp  CT7_FE_part2_solvedbugs.cpp  CT7_Final_Exercise.cpp  CT7_Final_Exercise_part2.cpp  CT7_Final_Exercise_part2_fixed.cpp  CT7_skip.cpp
test/: CMakeLists.txt  ExampleTests.cpp  main_test_runner.cpp  test_my_math.cpp  test_utilities.cpp
test/Exercises/: test_CT1_asserts.cpp  test_CT2_fixture.cpp  test_CT3_parameterized.cpp  test_CT4_skip.cpp  test_CT4_typed.cpp  test_CT5_death.cpp  test_CT6_predicated.cpp  test_CT7_FE_part1.cpp  test_CT7_FE_part1_FE_solved.cpp  test_CT7_Final_Exercise.cpp  test_CT7_Final_Exercise_part1.cpp  test_CT7_Final_Exercise_part2.cpp  test_CT7_Final_Exercise_part2_solved.cpp  test_CT7_skip.cpp
test/mocks/: mock_utilities.h
